# WSD-webscraping-example

./: README.md  WSD-webscrape-example.code-workspace  pyproject.toml
swift_bet_scraper/app/: bot_automation.py  constants.py  data_scraper.py  main.py  scrape_race_links.py  scraper_types.py  test.py  utils.py
swift_bet_scraper/data_output/: AU_NZ_GALLOPS_2024-12-27_race_data_collected_2024-12-27.csv  AU_NZ_GREYHOUNDS_2024-12-28_race_data_collected_2024-12-27.csv
swift_bet_scraper/performed_bets/: example_csv.csv  prices_cobram_race_1_2024-12-29_02-48-08.csv  prices_cobram_race_3_2024-12-29_03-58-08.csv  prices_gawler_race_3_2024-12-29_07-36-38.csv  prices_sale_race_1_2024-12-29_06-56-51.csv
swift_bet_scraper/race_link_info/: AU_NZ_GALLOPS_2024-12-28_race_data_collected_2024-12-27.csv  AU_NZ_GREYHOUNDS_2024-12-27_race_data_collected_2024-12-27.csv  AU_NZ_HARNESS_2024-12-27_race_data_collected_2024-12-27.csv  AU_NZ_HARNESS_2024-12-28_race_data_collected_2024-12-27.csv
swift_bet_scraper/races_data/: AU-NZ_GALLOPS_2024-12-28_race_data_collected_2024-12-28.csv  AU-NZ_GALLOPS_2024-12-29_race_data_collected_2024-12-28.csv  AU-NZ_GREYHOUNDS_2024-12-28_race_data_collected_2024-12-28.csv  AU-NZ_GREYHOUNDS_2024-12-29_race_data_collected_2024-12-28.csv  AU-NZ_HARNESS_2024-12-28_race_data_collected_2024-12-28.csv  AU-NZ_HARNESS_2024-12-29_race_data_collected_2024-12-28.csv  AU_NZ_GALLOPS_2024-12-28_race_data_collected_2024-12-28.csv  AU_NZ_GALLOPS_2024-12-29_race_data_collected_2024-12-28.csv  AU_NZ_GREYHOUNDS_2024-12-28_race_data_collected_2024-12-28.csv  (+3 more)
